// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HtmlSanitizer /> does not strip out images with absolute paths 1`] = `
<div
  class=" common__html-sanitizer"
>
  
      
  <div>
    
        
    <a
      href="foo"
    >
      
          
      <img
        src="http://google.de/bar.jpg"
      />
      
        
    </a>
    
      
  </div>
  
    
</div>
`;

exports[`<HtmlSanitizer /> should render the HtmlSanitizer 1`] = `
<div
  class=" common__html-sanitizer"
>
  <h1>
    Hello World!
  </h1>
</div>
`;

exports[`<HtmlSanitizer /> strips out images with relative paths 1`] = `
<div
  class=" common__html-sanitizer"
>
  
      
  <div>
    
      
    
        
    <a
      href="foo"
    >
      
          
        
    </a>
    
      
  </div>
  
    
</div>
`;

exports[`<HtmlSanitizer /> strips out the script tags 1`] = `
<HtmlSanitizer
  className=""
  comfortCookiesAccepted={false}
  decode={true}
  navigate={[Function]}
  processStyles={false}
  settings={Object {}}
  statisticsCookiesAccepted={false}
  wrapper={[Function]}
>
  <Component
    cookieConsentSettings={
      Object {
        "comfortCookiesAccepted": false,
        "statisticsCookiesAccepted": false,
      }
    }
  >
    <div
      className=" common__html-sanitizer"
      dangerouslySetInnerHTML={
        Object {
          "__html": "  <p>Foo Bar</p> ",
        }
      }
    />
  </Component>
</HtmlSanitizer>
`;
